# Shida

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
agent/: cli.ts  index.ts
agent/decorators/: cli.ts  index.ts
agent/documentation/: class_documentation_generator.ts  document_class_decorator.ts  document_method_decorator.ts  documentation_initializer.ts  index.ts  method_documentation_descriptor.ts  method_documentation_generator.ts  method_parameter_documentation_descriptor.ts  method_return_value_documentation_descriptor.ts
agent/java/: class_retriever.ts  hooker.ts  index.ts  java_logcat_logger.ts  java_process.ts  reentrant_lock.ts  reflection.ts  stringifier.ts  tracer.ts  type_caster.ts  ui_dumper.ts  ui_tracer.ts
agent/java/cli/: field_watcher_cli.ts  index.ts  reflection_cli.ts  tracing_cli.ts  ui_cli.ts
agent/java/iteration/: iterable_wrapper.ts  iterator_wrapper.ts
agent/java/tracing/: backtracer.ts  index.ts  log_filter.ts  log_tracer.ts  tracer.ts  (+1 more)
agent/logger/: console_sink.ts  index.ts  logcat_logger.ts  logcat_sink.ts  logger.ts  sink.ts
agent/man/: class_decorator.ts  index.ts  man_page.ts  method_decorator.ts
agent/native/: index.ts  native_logcat_logger.ts
repl/: pyproject.toml
repl/repl/: main.py  shida_repl.py
shida/crates/shida/: Cargo.toml
shida/crates/shida/src/: lib.rs  shida.rs  shida_configuration.rs
shida/crates/shida/src/configuration/: configuration_factory.rs  figment_configuration_factory.rs  mod.rs
shida/crates/shida/src/shida_configuration/: environment_shida_configuration_factory.rs  mod.rs  shida_configuration_factory.rs
shida/crates/shida_main/: Cargo.toml
shida/crates/shida_main/src/: main.rs
shida/crates/shida_python_virtual_environment/: Cargo.toml
shida/crates/shida_python_virtual_environment/src/: lib.rs  python_virtual_environment.rs  virtualenv.rs
shida_agent/: cli.ts
shida_agent/documentation/: class_documentation_descriptor.ts  class_documentation_generator.ts  document_class_decorator.ts  documentation_initializer.ts  documentation_retriever.ts  method_documentation_descriptor.ts
shida_agent/java/: index.ts  java_initializer.ts  java_logcat_logger.ts  type_caster.ts
shida_agent/logger/: index.ts  logcat_sink.ts  logger.ts
shida_agent/native/: native_logcat_logger.ts
(+86 files in other folders)
