[workspace]
resolver = "2"
default-members = ["shida/crates/shida_main"]
members = [
    "shida/crates/shida",
    "shida/crates/shida_agent",
    "shida/crates/shida_data_directory",
    "shida/crates/shida_error",
    "shida/crates/shida_file_system",
    "shida/crates/shida_main",
    "shida/crates/shida_python",
    "shida/crates/shida_python_virtual_environment",
    "shida/crates/shida_repl",
]
