[tool.poetry]
name = "shida-repl"
version = "0.1.0"
description = ""
authors = ["Yuval Dolev <mail@ydolev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
frida-tools = "^13.6.0"

[tool.poetry.scripts]
shida-repl = "shida_repl.main:main"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
