[tool.poetry]
name = "repl"
version = "0.1.0"
description = ""
authors = ["Yuval Dolev <mail@ydolev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
frida-tools = "^13.6.0"

[tool.poetry.scripts]
shida-repl = "repl.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
