[package]
name = "shida_python_virtual_environment"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
shida_error = { path = "../shida_error" }
shida_file_system = { path = "../shida_file_system" }
shida_python = { path = "../shida_python" }
